--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>やりたい事リスト（簡易登録＋分類）</title>
+  <title>やりたい事リスト（ジャンル選択＋年代別）</title>
   <style>
     body {
       font-family: sans-serif;
@@ -79,6 +79,17 @@
       margin-bottom: 1rem;
       color: #555;
     }
+    details {
+      margin-bottom: 1rem;
+    }
+    summary {
+      font-weight: bold;
+      font-size: 1.1rem;
+      background-color: #e0f0ff;
+      padding: 0.5rem;
+      border-radius: 5px;
+      cursor: pointer;
+    }
     footer {
       text-align: center;
       margin-top: 3rem;
@@ -93,7 +104,7 @@
   </style>
 </head>
 <body>
-  <h1>やりたい事リスト（簡易登録＋分類）</h1>  <div class="quote-box" id="quoteBox"></div>  <div class="quick-form">
+  <h1>やりたい事リスト（ジャンル選択＋年代別）</h1>  <div class="quote-box" id="quoteBox"></div>  <div class="quick-form">
     <label for="quickTitle">やりたいこと（まずはこれだけでOK）</label>
     <input type="text" id="quickTitle" placeholder="例：屋久島に行く">
     <button onclick="quickAdd()">追加</button>
@@ -127,31 +138,53 @@
 
     function render() {
       bucketList.innerHTML = "";
+      const grouped = {};
       data.forEach((item, index) => {
-        const div = document.createElement("div");
-        div.className = "item" + (item.done ? " done" : "");
-        div.innerHTML = `
-          <strong>${item.title}</strong><br>
-          ${item.category ? `ジャンル：${item.category}<br>` : ""}
-          ${item.age ? `予定年齢：${item.age}歳<br>` : ""}
-          ${item.memo ? `メモ：${item.memo}<br>` : ""}
-          <div class="buttons">
-            <button onclick="toggleDone(${index})">${item.done ? "未達成に戻す" : "✅ 達成"}</button>
-            <button onclick="showEdit(${index})">🖋 編集</button>
-            <button onclick="remove(${index})">🗑 削除</button>
-          </div>
-          <div class="share-link" id="share${index}"></div>
-          <div class="edit-form" id="edit${index}" style="display:none">
-            <label>ジャンル</label>
-            <input value="${item.category}" onchange="updateField(${index}, 'category', this.value)"><br>
-            <label>予定年齢</label>
-            <input type="number" value="${item.age}" onchange="updateField(${index}, 'age', this.value)"><br>
-            <label>メモ</label>
-            <textarea onchange="updateField(${index}, 'memo', this.value)">${item.memo}</textarea><br><button onclick="hideEdit(${index})">閉じる</button>
-      </div>
-    `;
-    bucketList.appendChild(div);
-    renderShareLink(index);
+        const decade = item.age ? Math.floor(item.age / 10) * 10 : "未分類";
+        if (!grouped[decade]) grouped[decade] = [];
+        grouped[decade].push({ item, index });
+      });
+      const sortedKeys = Object.keys(grouped).sort((a, b) => (a === "未分類" ? 1 : b === "未分類" ? -1 : a - b));
+      sortedKeys.forEach((decade) => {
+        const section = document.createElement("details");
+        section.open = true;
+        section.innerHTML = `<summary>${decade}代（${grouped[decade].length}件）</summary>`;
+        grouped[decade].forEach(({ item, index }) => {
+          const div = document.createElement("div");
+          div.className = "item" + (item.done ? " done" : "");
+          div.innerHTML = `
+            <strong>${item.title}</strong><br>
+            ${item.category ? `ジャンル：${item.category}<br>` : ""}
+            ${item.age ? `予定年齢：${item.age}歳<br>` : ""}
+            ${item.memo ? `メモ：${item.memo}<br>` : ""}
+            <div class="buttons">
+              <button onclick="toggleDone(${index})">${item.done ? "未達成に戻す" : "✅ 達成"}</button>
+              <button onclick="showEdit(${index})">🖋 編集</button>
+              <button onclick="remove(${index})">🗑 削除</button>
+            </div>
+            <div class="share-link" id="share${index}"></div>
+            <div class="edit-form" id="edit${index}" style="display:none">
+              <label>ジャンル</label>
+              <select onchange="updateField(${index}, 'category', this.value)">
+                <option value="">選択してください</option>
+                <option value="旅行" ${item.category === "旅行" ? "selected" : ""}>旅行</option>
+                <option value="仕事" ${item.category === "仕事" ? "selected" : ""}>仕事</option>
+                <option value="学び" ${item.category === "学び" ? "selected" : ""}>学び</option>
+                <option value="健康" ${item.category === "健康" ? "selected" : ""}>健康</option>
+                <option value="趣味" ${item.category === "趣味" ? "selected" : ""}>趣味</option>
+                <option value="家族" ${item.category === "家族" ? "selected" : ""}>家族</option>
+                <option value="挑戦" ${item.category === "挑戦" ? "selected" : ""}>挑戦</option>
+              </select><br>
+              <label>予定年齢</label>
+              <input type="number" value="${item.age}" onchange="updateField(${index}, 'age', this.value)"><br>
+              <label>メモ</label>
+              <textarea onchange="updateField(${index}, 'memo', this.value)">${item.memo}</textarea><br><button onclick="hideEdit(${index})">閉じる</button>
+        </div>
+      `;
+      section.appendChild(div);
+      renderShareLink(index);
+    });
+    bucketList.appendChild(section);
   });
 }
 
